# SDL

./: CMakeLists.txt  README.md
cmake/modules/: FindSDL.cmake  FindSDL_mixer.cmake
src/: CMakeCache.txt  main.cpp
